--- a/themes/daka-theme/docroot/css/.sass-cache/custom_common.css
+++ b/themes/daka-theme/docroot/css/.sass-cache/custom_common.css
@@ -3,7 +3,7 @@
   margin-bottom: 1.5em; }
 
 .breadcrumbs-horizontal li {
-  background: url(../images/arrows/05_left.png) no-repeat 100% 50%;
+  background: url(../images/arrows/05_right.png) no-repeat 100% 50%;
   margin-right: 5px;
   max-width: 50%;
   padding-right: 15px; }
