--- a/themes/daka-theme/docroot/css/dockbar.css
+++ b/themes/daka-theme/docroot/css/dockbar.css
@@ -285,7 +285,7 @@ html > .lfr-dockbar-pinned {
 }
 
 .my-sites-menu .current-site a {
-	background: #3068BA url(../images/arrows/01_left.png) no-repeat scroll 2px 30%;
+	background: #3068BA url(../images/arrows/01_right.png) no-repeat scroll 2px 30%;
 	color: #FFF;
 	padding-left: 20px;
 	text-shadow: 1px 1px #333;
