--- a/themes/daka-theme/docroot/css/rtl/.sass-cache/application.css
+++ b/themes/daka-theme/docroot/css/rtl/.sass-cache/application.css
@@ -1,15 +1,18 @@
 /* ---------- Main ---------- */
 .aui-state-default {
   background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+  /*rtl*/
   border: 1px solid;
   border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA; }
 
 .aui-state-hover {
   background: #b9ced9 url(../../images/rtl/application/state_hover_bg.png) repeat-x right 0;
+  /*rtl*/
   border-color: #627782; }
 
 .aui-state-active {
   background: #ebebeb url(../../images/rtl/application/state_active_bg.png) repeat-x right 0;
+  /*rtl*/
   border-color: #555; }
 
 .results-grid {
@@ -20,30 +23,38 @@
 .results-header {
   background: #D1D6DC; }
   .results-header th {
-    background: #d9d9d9 url(../../images/rtl/application/subheader_bg.png) right 0 repeat-x;
+    background: #d9d9d9 url(../../images/rtl/application/subheader_bg.png) 0 right repeat-x;
+    /*rtl*/
     border: 1px solid #ccc; }
     .results-header th.sort-column {
-      background: #ebebeb url(../../images/rtl/application/state_active_bg.png) right 0 repeat-x;
+      background: #ebebeb url(../../images/rtl/application/state_active_bg.png) 0 right repeat-x;
+      /*rtl*/
       border: 1px solid #ccc;
       color: #1F1E1E; }
       .results-header th.sort-column .result-column-name {
-        background: url(../../images/rtl/arrows/05_up.png) no-repeat left 50%;
+        background: url(../../images/rtl/arrows/05_up.png) no-repeat 0 50%;
+        /*rtl*/
         display: inline-block;
         font-style: italic;
-        padding-left: 15px; }
+        padding-left: 15px;
+        /*rtl*/ }
     .results-header th.first {
-      border-right-width: 0; }
+      border-right-width: 0;
+      /*rtl*/ }
     .results-header th.last {
-      border-left-width: 0; }
+      border-left-width: 0;
+      /*rtl*/ }
   .results-header th, .results-header td {
     color: #7B7C7F;
     padding: 5px 10px;
     word-wrap: break-word; }
   .results-header th.sort-desc .result-column-name {
-    background: url(../../images/rtl/arrows/05_down.png) no-repeat left 50%;
+    background: url(../../images/rtl/arrows/05_down.png) no-repeat 0 50%;
+    /*rtl*/
     display: inline-block;
     font-style: italic;
-    padding-left: 15px; }
+    padding-left: 15px;
+    /*rtl*/ }
   .results-header span, .results-header a {
     display: block; }
   .results-header a {
@@ -74,12 +85,16 @@
   background: #D3E8F1;
   border-bottom-color: #D7D7D7;
   border-right-color: transparent;
-  border-left-color: transparent; }
+  /*rtl*/
+  border-left-color: transparent;
+  /*rtl*/ }
 
 .taglib-search-iterator .results-row td.first, .taglib-search-iterator .results-row th.first {
-  border-right-width: 0; }
+  border-right-width: 0;
+  /*rtl*/ }
 .taglib-search-iterator .results-row td.last, .taglib-search-iterator .results-row th.last {
-  border-left-width: 0; }
+  border-left-width: 0;
+  /*rtl*/ }
 
 /* ---------- Dragging/sorting indicators ---------- */
 .portlet-layout.dragging {
@@ -116,6 +131,7 @@
     height: 32px;
     position: absolute;
     left: -15px;
+    /*rtl*/
     top: -15px;
     width: 32px; }
 
@@ -175,13 +191,17 @@
 /* ---------- Tag cloud and tag list ---------- */
 .tag-items {
   list-style: none;
-  margin: 0 1em 0 0;
+  margin: 0 0 0 1em;
+  /*rtl*/
   padding: 0 1em 0.5em 1em;
+  /*rtl*/
   white-space: normal; }
   .tag-items li {
     display: inline;
     float: right;
-    margin: 0 1em 0 0; }
+    /*rtl*/
+    margin: 0 0 0 1em;
+    /*rtl*/ }
   .tag-items a {
     white-space: nowrap; }
 
@@ -189,6 +209,7 @@
   line-height: 2.5em; }
   .tag-cloud .tag-asset-count {
     clip: rect(0 0 0 0);
+    /*rtl*/
     position: absolute; }
 
 .tag-selected {
@@ -200,6 +221,7 @@
   line-height: 2.5em; }
   .tag-cloud .tag-asset-count {
     clip: rect(0 0 0 0);
+    /*rtl*/
     position: absolute; }
   .tag-cloud .tag-popularity-1 {
     font-size: 1em; }
@@ -228,12 +250,14 @@
 
 .aui-underlay-content {
   background: #f4f3f3 url(../../images/rtl/common/message_panel_shadow.png) repeat-x right 0;
+  /*rtl*/
   border: 0 solid #AEAFB1;
   border-width: 0 1px 1px; }
 
 .aui-underlay-close {
   position: absolute;
   left: 5px;
+  /*rtl*/
   top: 5px; }
 
 /* ---------- Tabs ---------- */
@@ -241,7 +265,8 @@
   font-weight: normal; }
 
 .aui-tab-back {
-  float: left; }
+  float: left;
+  /*rtl*/ }
 
 .aui-tab-back-content {
   border-width: 0;
@@ -258,7 +283,8 @@
   padding: 5px 10px; }
 
 .lfr-panel-basic .lfr-panel-content {
-  padding-right: 15px; }
+  padding-right: 15px;
+  /*rtl*/ }
 
 .aui-dialog-bd {
   min-height: 30px; }
@@ -269,9 +295,11 @@
 
 .aui-panel-hd {
   background: #c0c2c5 url(../../images/rtl/application/panel_header_bg.png) repeat-x right 0;
+  /*rtl*/
   border: 1px solid;
   border-color: #C8C9CA #AEB2B8 #AEB2B8 #C8C9CA;
   padding-right: 10px;
+  /*rtl*/
   text-shadow: 1px 1px #FFF; }
 
 /* ---------- Menus ---------- */
@@ -304,6 +332,7 @@
 
 .aui-menu-content, .lfr-menu-list ul {
   background: #ccc9c9 url(../../images/rtl/application/menu_bg.png) repeat-x right 0;
+  /*rtl*/
   border: 1px solid;
   border-color: #AEAFB1 #777879 #777879 #AEAFB1;
   padding: 2px 0; }
@@ -356,11 +385,13 @@
   display: inline-block;
   margin: 0;
   margin-right: 10px;
+  /*rtl*/
   padding: 0;
   vertical-align: middle; }
 
 .aui-toolbar-separator {
-  background: url(../../images/rtl/dockbar/separator.png) no-repeat left 50%;
+  background: url(../../images/rtl/dockbar/separator.png) no-repeat 0 50%;
+  /*rtl*/
   border-width: 0;
   cursor: default;
   font-size: 1px;
@@ -375,7 +406,8 @@
   background: #CCC; }
 
 .aui-loadingmask-message {
-  background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0; }
+  background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+  /*rtl*/ }
 
 /* ---------- Tree View ---------- */
 .aui-tree-node-selected .aui-tree-label {
@@ -423,7 +455,8 @@
   text-indent: 0; }
 
 .aui-paginator-current-page {
-  background: #0083bd url(../../images/rtl/application/paginator_link_current_bg.png) right 0 repeat-x;
+  background: #0083bd url(../../images/rtl/application/paginator_link_current_bg.png) 0 right repeat-x;
+  /*rtl*/
   border-color: #38B6EF #006D9E #006D9E #46B4E6;
   color: #FFF;
   text-shadow: -1px -1px #003c57; }
@@ -459,7 +492,8 @@
   color: #555; }
 
 .aui-paginator-current-page-report {
-  margin-right: 2em; }
+  margin-right: 2em;
+  /*rtl*/ }
 
 .taglib-page-iterator .search-pages .page-links {
   padding: 0; }
@@ -471,28 +505,35 @@
     position: relative; }
   .lfr-app-column-view .aui-column:before {
     border-left: 1px solid #C9C9C9;
+    /*rtl*/
     bottom: 0;
     content: "";
     margin-right: -1px;
+    /*rtl*/
     position: absolute;
     top: 0; }
   .lfr-app-column-view .aui-column-content {
-    border-left: 1px solid transparent; }
+    border-left: 1px solid transparent;
+    /*rtl*/ }
     .lfr-app-column-view .aui-column-content .lfr-message-response {
       margin: 10px; }
 
 /* ---------- Header row ---------- */
 .lfr-header-row {
-  background: #8f8f8f url(../../images/rtl/application/header_row_bg.png) right 0 repeat-x; }
+  background: #8f8f8f url(../../images/rtl/application/header_row_bg.png) 0 right repeat-x;
+  /*rtl*/ }
   .lfr-header-row .lfr-actions.show-arrow.direction-down .lfr-trigger strong a {
-    background: url(../../images/rtl/arrows/08_down.png) left -5px no-repeat; }
+    background: url(../../images/rtl/arrows/08_down.png) 0 -5px no-repeat;
+    /*rtl*/ }
   .lfr-header-row .aui-toolbar .aui-toolbar-content {
     white-space: normal;
     word-wrap: normal; }
   .lfr-header-row .aui-toolbar .aui-toolbar-item {
-    border-left-width: 0; }
+    border-left-width: 0;
+    /*rtl*/ }
   .lfr-header-row .aui-toolbar .aui-toolbar-last {
-    border-left-width: 1px; }
+    border-left-width: 1px;
+    /*rtl*/ }
 
 .ie .portlet-boundary.yui3-dd-dragging {
   -ms-filter: alpha(opacity=60);
@@ -501,6 +542,7 @@
   filter: alpha(opacity=65); }
 .ie .aui-proxy.not-intersecting .forbidden-action {
   left: 2px;
+  /*rtl*/
   top: 2px; }
 .ie .layout-customizable-controls {
   -ms-filter: alpha(opacity=90);
