--- a/themes/daka-theme/docroot/css/rtl/.sass-cache/custom_common.css
+++ b/themes/daka-theme/docroot/css/rtl/.sass-cache/custom_common.css
@@ -3,10 +3,13 @@
   margin-bottom: 1.5em; }
 
 .breadcrumbs-horizontal li {
-  background: url(../../images/rtl/arrows/05_right.png) no-repeat left 50%;
+  background: url(../../images/rtl/arrows/05_right.png) no-repeat 0 50%;
+  /*rtl*/
   margin-left: 5px;
+  /*rtl*/
   max-width: 50%;
-  padding-left: 15px; }
+  padding-left: 15px;
+  /*rtl*/ }
 
 .breadcrumbs-vertical li {
   background: url(../../images/rtl/arrows/07_down.png) no-repeat 50% 100%;
@@ -35,14 +38,17 @@
 /* ---------- Hidden Accessible ---------- */
 #skip-to-content, #banner h2, #banner h3, #navigation h1, .site-breadcrumbs h1 {
   clip: rect(0 0 0 0);
+  /*rtl*/
   position: absolute; }
 
 .opens-new-window-accessible {
   background: url(../../images/rtl/common/open_window.png) no-repeat right 50%;
+  /*rtl*/
   display: inline-block;
   font-size: 0;
   height: 11px;
   margin-right: 2px;
+  /*rtl*/
   overflow: hidden;
   text-indent: -9999px;
   vertical-align: top;
@@ -51,13 +57,19 @@
 /* ---------- Extras ---------- */
 .lfr-title-scope-selector {
   -moz-border-radius-bottomright: 4px;
+  /*rtl*/
   -webkit-border-bottom-right-radius: 4px;
-  border-bottom-right-radius: 4px; }
+  /*rtl*/
+  border-bottom-right-radius: 4px;
+  /*rtl*/ }
 
 .lfr-title-scope-selector {
   -moz-border-radius-bottomleft: 4px;
+  /*rtl*/
   -webkit-border-bottom-left-radius: 4px;
-  border-bottom-left-radius: 4px; }
+  /*rtl*/
+  border-bottom-left-radius: 4px;
+  /*rtl*/ }
 
 .logo .current-site, #navigation, #navigation a, .portlet, .portlet-topper, .site-breadcrumbs ul, .aui-form-validator-message {
   -moz-border-radius: 4px;
