--- a/themes/daka-theme/docroot/css/rtl/.sass-cache/extras.css
+++ b/themes/daka-theme/docroot/css/rtl/.sass-cache/extras.css
@@ -60,7 +60,8 @@
   -o-border-radius: 1px 4px 4px 1px;
   -ms-border-radius: 1px 4px 4px 1px;
   -khtml-border-radius: 1px 4px 4px 1px;
-  border-radius: 1px 4px 4px 1px; }
+  border-radius: 1px 4px 4px 1px;
+  /*rtl*/ }
 
 .lfr-search-combobox .aui-button-input {
   -moz-border-radius: 4px 1px 1px 4px;
@@ -68,7 +69,8 @@
   -o-border-radius: 4px 1px 1px 4px;
   -ms-border-radius: 4px 1px 1px 4px;
   -khtml-border-radius: 4px 1px 1px 4px;
-  border-radius: 4px 1px 1px 4px; }
+  border-radius: 4px 1px 1px 4px;
+  /*rtl*/ }
 
 body > .lfr-menu-list, body > .lfr-menu-list ul, .lfr-actions, .aui-dialog-content, .aui-dialog .yui3-widget-hd, .modify-pages .delete-tab, input[type="submit"], input[type="button"], input[type="reset"], button, .tags-search-combobox .aui-field-input-text, .staging-icon-menu-container .staging-icon-menu.lfr-actions .lfr-trigger strong a, .active-area-proxy, .portlet-document-library .document-display-style .document-thumbnail img, .portlet-document-library-display .document-display-style .document-thumbnail img, .aui-paginator-link, .lfr-header-row .aui-toolbar-only, .lfr-translation-manager, .lfr-translation-manager-translation, .select-documents, .select-files, .taglib-ratings.stars:hover, .taglib-ratings.stars:hover .liferay-rating-vote, .rule-group-instance-container .rule-group-instance, .portlet-search .search-facet .facet-value, .lfr-api-results {
   -moz-border-radius: 4px;
@@ -95,46 +97,46 @@ body > .lfr-menu-list, body > .lfr-menu-list ul, .lfr-actions, .aui-dialog-conte
   border-radius: 6px; }
 
 .aui-menu-content {
-  -moz-border-radius-bottomright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  -o-border-bottom-right-radius: 4px;
-  -ms-border-bottom-right-radius: 4px;
-  -khtml-border-bottom-right-radius: 4px;
-  border-bottom-right-radius: 4px;
   -moz-border-radius-bottomleft: 4px;
   -webkit-border-bottom-left-radius: 4px;
   -o-border-bottom-left-radius: 4px;
   -ms-border-bottom-left-radius: 4px;
   -khtml-border-bottom-left-radius: 4px;
-  border-bottom-left-radius: 4px; }
+  border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  -o-border-bottom-right-radius: 4px;
+  -ms-border-bottom-right-radius: 4px;
+  -khtml-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px; }
 
 .aui-underlay-content {
-  -moz-border-radius-bottomright: 8px;
-  -webkit-border-bottom-right-radius: 8px;
-  -o-border-bottom-right-radius: 8px;
-  -ms-border-bottom-right-radius: 8px;
-  -khtml-border-bottom-right-radius: 8px;
-  border-bottom-right-radius: 8px;
   -moz-border-radius-bottomleft: 8px;
   -webkit-border-bottom-left-radius: 8px;
   -o-border-bottom-left-radius: 8px;
   -ms-border-bottom-left-radius: 8px;
   -khtml-border-bottom-left-radius: 8px;
-  border-bottom-left-radius: 8px; }
+  border-bottom-left-radius: 8px;
+  -moz-border-radius-bottomright: 8px;
+  -webkit-border-bottom-right-radius: 8px;
+  -o-border-bottom-right-radius: 8px;
+  -ms-border-bottom-right-radius: 8px;
+  -khtml-border-bottom-right-radius: 8px;
+  border-bottom-right-radius: 8px; }
 
 .lfr-hudcrumbs ul {
-  -moz-border-radius-topright: 0;
-  -webkit-border-top-right-radius: 0;
-  -o-border-top-right-radius: 0;
-  -ms-border-top-right-radius: 0;
-  -khtml-border-top-right-radius: 0;
-  border-top-right-radius: 0;
   -moz-border-radius-topleft: 0;
   -webkit-border-top-left-radius: 0;
   -o-border-top-left-radius: 0;
   -ms-border-top-left-radius: 0;
   -khtml-border-top-left-radius: 0;
-  border-top-left-radius: 0; }
+  border-top-left-radius: 0;
+  -moz-border-radius-topright: 0;
+  -webkit-border-top-right-radius: 0;
+  -o-border-top-right-radius: 0;
+  -ms-border-top-right-radius: 0;
+  -khtml-border-top-right-radius: 0;
+  border-top-right-radius: 0; }
 
 .lfr-message .lfr-message-control {
   -moz-border-radius: 10px;
