--- a/themes/daka-theme/docroot/css/rtl/.sass-cache/forms.css
+++ b/themes/daka-theme/docroot/css/rtl/.sass-cache/forms.css
@@ -15,10 +15,12 @@ fieldset {
 
 .aui-field-inline .aui-field-content, .aui-field-row .aui-field-content {
   margin: 0;
-  margin-right: 5px; }
+  margin-left: 5px;
+  /*rtl*/ }
 
 .aui-search-bar .aui-field-content {
-  margin-right: 0; }
+  margin-left: 0;
+  /*rtl*/ }
 .aui-search-bar .aui-field-content, .aui-search-bar .aui-button-content {
   display: inline-block;
   vertical-align: middle; }
@@ -69,6 +71,7 @@ input[type="image"] {
 
 input[type="submit"], input[type="button"], input[type="reset"], button {
   background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+  /*rtl*/
   border: 1px solid;
   border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
   color: #34404F;
@@ -80,10 +83,12 @@ input[type="submit"], input[type="button"], input[type="reset"], button {
   width: auto; }
   input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover, button:hover {
     background: #b9ced9 url(../../images/rtl/application/state_hover_bg.png) repeat-x right 0;
+    /*rtl*/
     border-color: #627782;
     color: #369; }
   input[type="submit"]:focus, input[type="button"]:focus, input[type="reset"]:focus, button:focus {
     background: #ebebeb url(../../images/rtl/application/state_active_bg.png) repeat-x right 0;
+    /*rtl*/
     border-color: #555; }
 
 input.focus, textarea.focus {
@@ -92,6 +97,7 @@ input.focus, textarea.focus {
 
 .lfr-actions.lfr-extended, .lfr-actions.lfr-extended ul {
   background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+  /*rtl*/
   border: 1px solid;
   border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
   color: #34404F;
@@ -104,14 +110,17 @@ input.focus, textarea.focus {
   padding: 0; }
 .lfr-actions.lfr-extended:focus, .lfr-actions.lfr-extended:focus ul {
   background: #ebebeb url(../../images/rtl/application/state_active_bg.png) repeat-x right 0;
+  /*rtl*/
   border-color: #555; }
 .lfr-actions.lfr-extended.disabled, .lfr-actions.lfr-extended.disabled ul, .lfr-actions.lfr-extended.disabled:hover, .lfr-actions.lfr-extended.disabled:hover ul {
   background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+  /*rtl*/
   border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
   color: #555;
   opacity: 0.5; }
 .lfr-actions.lfr-extended:hover, .lfr-actions.lfr-extended:hover ul {
   background: #b9ced9 url(../../images/rtl/application/state_hover_bg.png) repeat-x right 0;
+  /*rtl*/
   border-color: #627782;
   color: #369; }
 
@@ -120,12 +129,14 @@ input.focus, textarea.focus {
 
 .aui-button-disabled input[type], .aui-button-disabled input[type]:hover, .aui-button-disabled input[type]:focus, .aui-button-disabled button, .aui-button-disabled button:hover, .aui-button-disabled button:focus {
   background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+  /*rtl*/
   border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
   color: #555;
   opacity: 0.5; }
 
 .aui-buttonitem-disabled {
   background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+  /*rtl*/
   border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
   color: #555;
   opacity: 0.5; }
@@ -153,6 +164,7 @@ input.aui-form-validator-error, textarea.aui-form-validator-error, select.aui-fo
   padding: 5px 1px; }
 .ie6 input.submit, .ie6 input.button, .ie6 button, .ie6 .aui-button-disabled input.submit, .ie6 .aui-button-disabled input.button, .ie6 .aui-button-disabled button {
   background: #d4d4d4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+  /*rtl*/
   border: 1px solid;
   border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
   color: #34404F;
