--- a/themes/daka-theme/docroot/css/rtl/custom.css
+++ b/themes/daka-theme/docroot/css/rtl/custom.css
@@ -9,7 +9,7 @@
 /* ---------- Base styles ---------- */
 
 body {
-	background: #EEF0F2;
+	/* background: #EEF0F2; */
 	font-size: 11px;
 }
 
@@ -32,7 +32,7 @@ hr, .separator {
 #wrapper {
 	background: none;
 	margin: 0 auto;
-	max-width: 90%;
+	max-width: 80%;
 	min-width: 960px;
 	position: relative;
 }
