--- a/themes/daka-theme/docroot/_diffs/css/rtl/.sass-cache/custom.css
+++ b/themes/daka-theme/docroot/_diffs/css/rtl/.sass-cache/custom.css
@@ -1,6 +1,514 @@
+/* ---------- Breadcrumbs ---------- */
+.breadcrumbs-horizontal {
+  margin-bottom: 1.5em; }
+
+.breadcrumbs-horizontal li {
+  background: url(../../images/rtl/arrows/05_right.png) no-repeat 0 50%;
+  /*rtl*/
+  margin-left: 5px;
+  /*rtl*/
+  max-width: 50%;
+  padding-left: 15px;
+  /*rtl*/ }
+
+.breadcrumbs-vertical li {
+  background: url(../../images/rtl/arrows/07_down.png) no-repeat 50% 100%;
+  padding: 0 0 9px;
+  max-width: auto; }
+
+.breadcrumbs a {
+  display: block; }
+
+.breadcrumbs-vertical a {
+  text-align: center;
+  text-decoration: none; }
+
+.breadcrumbs .last {
+  background-image: none; }
+
+.breadcrumbs-horizontal .last {
+  margin-top: 0.2em; }
+
+.breadcrumbs-vertical .last {
+  font-weight: bold; }
+
+.breadcrumbs-horizontal .last a, .aui-tree-node-selected a {
+  color: #555; }
+
+/* ---------- Hidden Accessible ---------- */
+#skip-to-content, #banner h2, #banner h3, #navigation h1, .site-breadcrumbs h1 {
+  clip: rect(0 0 0 0);
+  /*rtl*/
+  position: absolute; }
+
+.opens-new-window-accessible {
+  background: url(../../images/rtl/common/open_window.png) no-repeat right 50%;
+  /*rtl*/
+  display: inline-block;
+  font-size: 0;
+  height: 11px;
+  margin-right: 2px;
+  /*rtl*/
+  overflow: hidden;
+  text-indent: -9999px;
+  vertical-align: top;
+  width: 11px; }
+
+/* ---------- Extras ---------- */
+.lfr-title-scope-selector {
+  -moz-border-radius-bottomright: 4px;
+  /*rtl*/
+  -webkit-border-bottom-right-radius: 4px;
+  /*rtl*/
+  border-bottom-right-radius: 4px;
+  /*rtl*/ }
+
+.lfr-title-scope-selector {
+  -moz-border-radius-bottomleft: 4px;
+  /*rtl*/
+  -webkit-border-bottom-left-radius: 4px;
+  /*rtl*/
+  border-bottom-left-radius: 4px;
+  /*rtl*/ }
+
+.logo .current-site, #navigation, #navigation a, .portlet, .portlet-topper, .site-breadcrumbs ul, .aui-form-validator-message {
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px; }
+
+body.green, .green .portlet {
+  background-color: #F1F3EF; }
+
+.green .logo .current-site {
+  background-color: #AFBFA7; }
+
+.green .aui-state-hover {
+  background-color: #CFDABA;
+  background-image: url(../images/rtl/color_schemes/green/application/state_hover_bg.png);
+  border-color: #778362; }
+
+.green .aui-icon {
+  background-image: url(../images/rtl/color_schemes/green/aui/icon_sprite.png); }
+
+/* ---------- Links ---------- */
+.green a {
+  color: #677D5B; }
+
+.green a:hover {
+  color: #66CD00; }
+
+/* ---------- Application styling ---------- */
+.green .results-header {
+  background-color: #D7DDD2; }
+
+.green .results-row.alt td {
+  background-color: #E2E7DE; }
+
+.green .results-row.hover td {
+  background-color: #C4CDBD; }
+
+.green .drop-area {
+  background-color: #DBDED4; }
+
+.green .aui-resizable-proxy {
+  border-color: #909683; }
+
+.green .aui-sortable-proxy {
+  background-color: #7C8272; }
+
+.green .aui-menugroup-content h4 {
+  background-color: #D7DFD3;
+  color: #677D5B; }
+
+.green .aui-menu-content li a, .green .lfr-menu-list ul li a {
+  color: #2F342C; }
+
+.green .my-sites-menu .current-site {
+  border-color: #42811D; }
+
+.green .my-sites-menu .current-site a {
+  background-color: #68BB30;
+  color: #FFF; }
+
+.green .aui-menu-content li a.aui-focus, .green .lfr-menu-list ul a.aui-focus, .green .lfr-menu-expanded li a:focus {
+  background-color: #677D5B;
+  color: #FFF;
+  text-shadow: -1px -1px #2f342c; }
+
+.green .aui-tab {
+  background: none; }
+
+.green .aui-tab-active {
+  background-color: #333; }
+
+.green .aui-tab-active, .green .aui-tab-active a {
+  color: #FFF; }
+
+.green .portlet-communities .lfr-current-theme, .green .portlet-enterprise-admin .lfr-current-theme {
+  background-color: #F6F8F1;
+  border-color: #909683; }
+
+.green .portlet-communities .theme-entry, .green .portlet-communities .lfr-current-theme .theme-screenshot, .green .portlet-enterprise-admin .theme-entry, .green .portlet-enterprise-admin .lfr-current-theme .theme-screenshot {
+  border-color: #B9BDAF; }
+
+.green .portlet-communities .theme-entry .theme-title, .green .portlet-enterprise-admin .theme-entry .theme-title {
+  background-color: #909488;
+  border-color: #909683; }
+
+.green .portlet-communities .lfr-theme-list h3, .green .portlet-enterprise-admin .lfr-theme-list h3 {
+  background-color: #DBDED4; }
+
+.green .portlet-communities .selected-color-scheme .theme-entry, .green .portlet-enterprise-admin .selected-color-scheme .theme-entry {
+  border-color: #669A33; }
+
+.green .portlet-communities .lfr-theme-list .theme-entry:hover, .green .portlet-enterprise-admin .lfr-theme-list .theme-entry:hover {
+  background-color: #F5FFE0;
+  border-color: #CFE0A8;
+  color: #BBC99F; }
+
+.green .portlet-communities .theme-entry:hover .theme-thumbnail, .green .portlet-enterprise-admin .theme-entry:hover .theme-thumbnail {
+  border-color: #CFE0A8; }
+
+.green .portlet-document-library .detail-column-last {
+  background-color: #F2FFD8; }
+
+.green .portlet-document-library .detail-column-last .detail-column-content {
+  border-color: #C6DA89; }
+
+.green .dockbar {
+  background-color: #A2AF98;
+  background-image: url(../images/rtl/color_schemes/green/dockbar/dockbar_bg.png); }
+
+.green .dockbar .menu-button-active {
+  background-color: #95DB5C;
+  background-image: url(../images/rtl/color_schemes/green/dockbar/button_active_bg.png); }
+
+.green .dockbar .menu-button-active a {
+  color: #FFF; }
+
+.green .aui-portal-layout-drag-indicator {
+  background-color: #57B63C; }
+
+.green .aui-autocomplete-results-content {
+  border-color: #C1F599; }
+
+.green .aui-autocomplete-selected {
+  background-color: #E9F7E0;
+  border-color: #BBEAA4; }
+
+.green .aui-textboxlistentry {
+  background-color: #D9F4CB;
+  border-color: #BBEAA4; }
+
+.green .aui-textboxlistentry-focused {
+  background-color: #57B63C;
+  border-color: #404F34; }
+
+.green .aui-textboxlistentry-close-hover {
+  background-color: #BBEAA4; }
+
+/* ---------- Portlet wrapper and icons ---------- */
+.green .portlet {
+  border-color: #909683; }
+
+.green .portlet-topper {
+  background-color: #D9DDD3;
+  border-bottom-color: #B7BCAE; }
+
+.green .panel-page .portlet-topper {
+  border-bottom-color: #909683; }
+
+.green .portlet-section-selected, .green .portlet-section-selected a {
+  background-color: #909683; }
+
+.green .portlet-section-selected a:hover, .green .portlet-section-selected a:focus {
+  background-color: #909683; }
+
+/* ---------- Calendar portlet ---------- */
+.green .portlet-calendar .calendar-day .day-text {
+  background-color: #909683; }
+
+.green .taglib-calendar tr td a {
+  background-color: #EFF3EA; }
+
+.green .taglib-calendar tr td a:hover {
+  background-color: #909683; }
+
+.green .taglib-calendar .calendar-current-day a {
+  border-color: #909683;
+  color: #5F9930; }
+
+.green .portlet-calendar .taglib-calendar tr td.calendar-current-day a:hover, .green .portlet-calendar .taglib-calendar tr td.calendar-current-day a:focus {
+  background-color: #F2FFDF;
+  border-color: #B7BCAE;
+  color: #5BCC00; }
+
+.green .taglib-calendar .calendar-current-day, .green .taglib-calendar .calendar-current-day a {
+  background-color: #FFF; }
+
+.green .taglib-calendar tr td.calendar-inactive {
+  color: #BEC4B5; }
+
+/* ---------- Miscellaneous portlet styles ---------- */
+.green .journal-template-error .scroll-pane pre span {
+  background-color: #BEC4B5; }
+
+.green .restricted * {
+  color: #909683; }
+
+.green .lfr-actions .lfr-trigger li a:hover {
+  background-color: #909683; }
+
+.green .lfr-tag-selector-popup .aui-textfield-content {
+  background-color: #DBDED4;
+  border-color: #B9BDAF; }
+
+/* This CSS sets the default styles for forms. */
+.green input[type="submit"], .green input[type="button"], .green input[type="reset"], .green button, .green .lfr-actions, .green .lfr-actions ul {
+  color: #404F34; }
+
+.green input[type="submit"]:hover, .green input[type="button"]:hover, .green input[type="reset"]:hover, .green button:hover, .green .lfr-actions:hover, .green .lfr-actions:hover ul {
+  background-color: #CFDABA;
+  background-image: url(../images/rtl/color_schemes/green/application/state_hover_bg.png);
+  border-color: #778362;
+  color: #669A33; }
+
+.green input[type="submit"]:focus, .green input[type="button"]:focus, .green input[type="reset"]:focus, .green button:focus, .green .lfr-actions:focus, .green .lfr-actions:focus ul {
+  background-color: #ECECEC;
+  background-image: url(../images/rtl/application/state_active_bg.png); }
+
+/* ---------- IE6 chokes on attribute selectors in a chain, so we separate them into their own rule ---------- */
+.ie6 .green input.submit, .ie6 .green input.button, .ie6 .green button, .ie6 .green .aui-button-disabled input.submit, .ie6 .green .aui-button-disabled input.button, .ie6 .green .aui-button-disabled button {
+  color: #404F34; }
+
+/* ---------- Site breadcrumbs ---------- */
+.green .site-breadcrumbs li.first a {
+  color: #669A33; }
+
+.green .site-breadcrumbs li.last a {
+  color: #55674B; }
+
+.green .lfr-hudcrumbs .breadcrumbs li a, .green .lfr-hudcrumbs .breadcrumbs li span {
+  color: #FFF; }
+
+body.orange, .orange .portlet {
+  background-color: #F3F1EF; }
+
+.orange .logo .current-site {
+  background-color: #BFB8A7; }
+
+.orange .aui-state-hover {
+  background-color: #DAC8BA;
+  background-image: url(../images/rtl/color_schemes/orange/application/state_hover_bg.png);
+  border-color: #837062; }
+
+.orange .aui-icon {
+  background-image: url(../images/rtl/color_schemes/orange/aui/icon_sprite.png); }
+
+/* ---------- Links ---------- */
+.orange a {
+  color: #7D745B; }
+
+.orange a:hover {
+  color: #CD7700; }
+
+/* ---------- Application styling ---------- */
+.orange .results-header {
+  background-color: #DDD9D2; }
+
+.orange .results-row.alt td {
+  background-color: #E7E4DE; }
+
+.orange .results-row.hover td {
+  background-color: #CDC7BD; }
+
+.orange .drop-area {
+  background-color: #DED8D4; }
+
+.orange .aui-resizable-proxy {
+  border-color: #968A83; }
+
+.orange .aui-sortable-proxy {
+  background-color: #827972; }
+
+.orange .aui-menugroup-content h4 {
+  background-color: #DFDCD3;
+  color: #7D745B; }
+
+.orange .aui-menu-content li a, .orange .lfr-menu-list ul li a {
+  color: #34322C; }
+
+.orange .my-sites-menu .current-site {
+  border-color: #81641D; }
+
+.orange .my-sites-menu .current-site a {
+  background-color: #BB8F30;
+  color: #FFF; }
+
+.orange .aui-menu-content li a.aui-focus, .orange .lfr-menu-list ul a.aui-focus, .orange .lfr-menu-expanded li a:focus {
+  background-color: #7D745B;
+  color: #FFF;
+  text-shadow: -1px -1px #34322c; }
+
+.orange .aui-tab {
+  background: none; }
+
+.orange .aui-tab-active {
+  background-color: #333; }
+
+.orange .aui-tab-active, .orange .aui-tab-active a {
+  color: #FFF; }
+
+.orange .portlet-communities .lfr-current-theme, .orange .portlet-enterprise-admin .lfr-current-theme {
+  background-color: #F8F4F1;
+  border-color: #968A83; }
+
+.orange .portlet-communities .theme-entry, .orange .portlet-communities .lfr-current-theme .theme-screenshot, .orange .portlet-enterprise-admin .theme-entry, .orange .portlet-enterprise-admin .lfr-current-theme .theme-screenshot {
+  border-color: #BDB4AF; }
+
+.orange .portlet-communities .theme-entry .theme-title, .orange .portlet-enterprise-admin .theme-entry .theme-title {
+  background-color: #948D88;
+  border-color: #968A83; }
+
+.orange .portlet-communities .lfr-theme-list h3, .orange .portlet-enterprise-admin .lfr-theme-list h3 {
+  background-color: #DED8D4; }
+
+.orange .portlet-communities .selected-color-scheme .theme-entry, .orange .portlet-enterprise-admin .selected-color-scheme .theme-entry {
+  border-color: #9A6F33; }
+
+.orange .portlet-communities .lfr-theme-list .theme-entry:hover, .orange .portlet-enterprise-admin .lfr-theme-list .theme-entry:hover {
+  background-color: #FFEEE0;
+  border-color: #E0BDA8;
+  color: #C9B09F; }
+
+.orange .portlet-communities .theme-entry:hover .theme-thumbnail, .orange .portlet-enterprise-admin .theme-entry:hover .theme-thumbnail {
+  border-color: #E0BDA8; }
+
+.orange .portlet-document-library .detail-column-last {
+  background-color: #FFE9D8; }
+
+.orange .portlet-document-library .detail-column-last .detail-column-content {
+  border-color: #DAA489; }
+
+.orange .dockbar {
+  background-color: #AFA798;
+  background-image: url(../images/rtl/color_schemes/orange/dockbar/dockbar_bg.png); }
+
+.orange .dockbar .menu-button-active {
+  background-color: #DBAC5C;
+  background-image: url(../images/rtl/color_schemes/orange/dockbar/button_active_bg.png); }
+
+.orange .dockbar .menu-button-active a {
+  color: #FFF; }
+
+.orange .aui-portal-layout-drag-indicator {
+  background-color: #B6A63C; }
+
+.orange .aui-autocomplete-results-content {
+  border-color: #F5D599; }
+
+.orange .aui-autocomplete-selected {
+  background-color: #F7F0E0;
+  border-color: #EAD8A4; }
+
+.orange .aui-textboxlistentry {
+  background-color: #F4EACB;
+  border-color: #EAD8A4; }
+
+.orange .aui-textboxlistentry-focused {
+  background-color: #B6A63C;
+  border-color: #4F4534; }
+
+.orange .aui-textboxlistentry-close-hover {
+  background-color: #EAD8A4; }
+
+/* ---------- Portlet wrapper and icons ---------- */
+.orange .portlet {
+  border-color: #968A83; }
+
+.orange .portlet-topper {
+  background-color: #D9DDD3;
+  border-bottom-color: #B7BCAE; }
+
+.orange .panel-page .portlet-topper {
+  border-bottom-color: #968A83; }
+
+.orange .portlet-section-selected, .orange .portlet-section-selected a {
+  background-color: #968A83; }
+
+.orange .portlet-section-selected a:hover, .orange .portlet-section-selected a:focus {
+  background-color: #968A83; }
+
+/* ---------- Calendar portlet ---------- */
+.orange .portlet-calendar .calendar-day .day-text {
+  background-color: #968A83; }
+
+.orange .taglib-calendar tr td a {
+  background-color: #EFF3EA; }
+
+.orange .taglib-calendar tr td a:hover {
+  background-color: #968A83; }
+
+.orange .taglib-calendar .calendar-current-day a {
+  border-color: #968A83;
+  color: #5F9930; }
+
+.orange .portlet-calendar .taglib-calendar tr td.calendar-current-day a:hover, .orange .portlet-calendar .taglib-calendar tr td.calendar-current-day a:focus {
+  background-color: #F2FFDF;
+  border-color: #B7BCAE;
+  color: #5BCC00; }
+
+.orange .taglib-calendar .calendar-current-day, .orange .taglib-calendar .calendar-current-day a {
+  background-color: #FFF; }
+
+.orange .taglib-calendar tr td.calendar-inactive {
+  color: #BEC4B5; }
+
+/* ---------- Miscellaneous portlet styles ---------- */
+.orange .journal-template-error .scroll-pane pre span {
+  background-color: #BEC4B5; }
+
+.orange .restricted * {
+  color: #968A83; }
+
+.orange .lfr-actions .lfr-trigger li a:hover {
+  background-color: #968A83; }
+
+.orange .lfr-tag-selector-popup .aui-textfield-content {
+  background-color: #DED8D4;
+  border-color: #BDB4AF; }
+
+/* This CSS sets the default styles for forms. */
+.orange input[type="submit"], .orange input[type="button"], .orange input[type="reset"], .orange button, .orange .lfr-actions, .orange .lfr-actions ul {
+  color: #4F4534; }
+
+.orange input[type="submit"]:hover, .orange input[type="button"]:hover, .orange input[type="reset"]:hover, .orange button:hover, .orange .lfr-actions:hover, .orange .lfr-actions:hover ul {
+  background-color: #DAC8BA;
+  background-image: url(../images/rtl/color_schemes/orange/application/state_hover_bg.png);
+  border-color: #837062;
+  color: #9A6F33; }
+
+.orange input[type="submit"]:focus, .orange input[type="button"]:focus, .orange input[type="reset"]:focus, .orange button:focus, .orange .lfr-actions:focus, .orange .lfr-actions:focus ul {
+  background-color: #ECECEC;
+  background-image: url(../images/rtl/application/state_active_bg.png); }
+
+/* ---------- IE6 chokes on attribute selectors in a chain, so we separate them into their own rule ---------- */
+.ie6 .orange input.submit, .ie6 .orange input.button, .ie6 .orange button, .ie6 .orange .aui-button-disabled input.submit, .ie6 .orange .aui-button-disabled input.button, .ie6 .orange .aui-button-disabled button {
+  color: #4F4534; }
+
+/* ---------- Site breadcrumbs ---------- */
+.orange .site-breadcrumbs li.first a {
+  color: #9A6F33; }
+
+.orange .site-breadcrumbs li.last a {
+  color: #67604B; }
+
+.orange .lfr-hudcrumbs .breadcrumbs li a, .orange .lfr-hudcrumbs .breadcrumbs li span {
+  color: #FFF; }
+
 /* ---------- Base styles ---------- */
 body {
-  background: #EEF0F2;
+  /* background: #EEF0F2; */
   font-size: 11px; }
 
 a {
@@ -19,7 +527,7 @@ hr, .separator {
 #wrapper {
   background: none;
   margin: 0 auto;
-  max-width: 90%;
+  max-width: 70%;
   min-width: 960px;
   position: relative; }
 
