--- a/hooks/bidi-hook/docroot/custom_jsps/html/themes/control_panel/css/rtl/forms.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/themes/control_panel/css/rtl/forms.css
@@ -1,3 +1,11 @@
+#_156_regularCss {
+	direction: ltr;
+}
+
+#_88_regularCss {
+	direction: ltr;
+}
+
 @mixin input-field-default {
 	background-image: url(../../images/rtl/forms/input_shadow.png);
 	background-repeat: no-repeat;
